--- a/pom.xml
+++ b/pom.xml
@@ -7,18 +7,18 @@
   <version>1.0</version>
   <name>seckill Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <java.version>1.8</java.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.12</version>
     </dependency>
 
     <dependency>
@@ -33,18 +33,11 @@
       <version>1.1.1</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.16.20</version>
-      <scope>provided</scope>
-    </dependency>
-
     <!--数据库相关的依赖-->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.35</version>
+      <version>5.1.46</version>
     </dependency>
 
     <dependency>
@@ -79,13 +72,6 @@
     </dependency>
 
     <!--spring 依赖-->
-
-    <dependency>
-      <groupId> org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-      <version>4.1.7.release</version>
-    </dependency>
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
@@ -147,5 +133,19 @@
   </dependencies>
   <build>
     <finalName>seckill</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.1</version>
+        <configuration>
+          <port>9090</port>
+          <path>/</path>
+          <uriEncoding>UTF-8</uriEncoding>
+          <finalName>seckill</finalName>
+          <server>tomcat7</server>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
