--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,13 @@
       <version>1.2.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+
+
 
   </dependencies>
   <build>
